<resources>
    <string name="app_name">ConversorMoneda</string>
    <string name="Conver">Conversor de monedas</string>
    <string name="Convertir">Cantidad a convertir:</string>
    <string name="PesosCol">Pesos Colombianos</string>
    <string name="Dolares">Dolar USA</string>
    <string name="Euro">Euro</string>
    <string name="Consultar">Consultar valor</string>
    <string name="De">De:</string>
    <string name="A">A:</string>
</resources>
