<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aquamarine">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitulo"
                    android:text="@string/Conver"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textAllCaps="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCantidad"
                    android:inputType="number"
                    android:gravity="center_horizontal"
                    android:hint="@string/Convertir"
                    android:backgroundTint="@color/white"
                    android:textCursorDrawable="@null"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDe"
                    android:text="@string/De"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textAllCaps="true"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spSpinner"
                    android:layout_gravity="center">
            </Spinner>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvA"
                        android:text="@string/A"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textAllCaps="true"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spSpinner2"
                        android:layout_gravity="center">
                </Spinner>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bnGuardar"
                    android:text="@string/Consultar"
                    android:textAllCaps="false"
                    android:textSize="20sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvResultado"
                    android:text=""
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:background="@color/aquamarine"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>